--- a/SDL_GetAudioDriver.mediawiki
+++ b/SDL_GetAudioDriver.mediawiki
@@ -1,23 +1,22 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-
 = SDL_GetAudioDriver =
-Use this function to get the name of a built in audio driver. 
+Use this function to get the name of a built in audio driver.
 
 
 == Syntax ==
 ```c++
 const char* SDL_GetAudioDriver(int index)
 ```
-
 == Function Parameters ==
 {|
-|'''index'''
-|the index of the audio driver; the value ranges from 0 to 1 - [[SDL_GetNumAudioDrivers]]()
+|'''index''' 
+|the index of the audio driver; the value ranges from 0 to [[SDL_GetNumAudioDrivers]]() - 1. 
 |}
 
+
 == Return Value ==
-Returns the name of the audio driver at the requested index.  
+Returns the name of the audio driver at the requested index.
 
 <<Color2(green,What happens if it fails or there is no driver?  Empty ""?)>>
 
@@ -29,12 +28,11 @@ for ( i = 0; i < SDL_GetNumAudioDrivers(); ++i ) {
     printf("Audio driver %d: %s\n", i, SDL_GetAudioDriver(i);
 }
 ```
-
 == Remarks ==
 The list of audio drivers is given in the order that they are normally initialized by default.
 
 == Related Functions ==
-:[[SDL_GetNumAudioDrivers]]
+: [[SDL_GetNumAudioDrivers]]
 
 ----
-[[CategoryAPI]], [[CategoryAudio]]
+[[CategoryAPI]], CategoryAudio
