--- a/SDL_RWFromFP.mediawiki
+++ b/SDL_RWFromFP.mediawiki
@@ -3,15 +3,11 @@
 '''DRAFT'''
 
 = SDL_RWFromFP =
-Use this function to create an SDL_RWops structure from a standard I/O file pointer.
+Use this function to create an SDL_RWops structure from a standard I/O file pointer (stdio.h's <code>FILE*</code>).
 
 
 == Syntax ==
 ```c++
-#ifdef HAVE_STDIO_H
-SDL_RWops* SDL_RWFromFP(FILE*    fp,
-                        SDL_bool autoclose)
-#else
 SDL_RWops* SDL_RWFromFP(void*    fp,
                         SDL_bool autoclose)
 ```
@@ -19,38 +15,33 @@ SDL_RWops* SDL_RWFromFP(void*    fp,
 == Function Parameters ==
 {|
 |'''fp'''
-|,,a pointer to ,,^the file to open (in the new structure ???)^
+|the <code>FILE*</code> that feeds the [[SDL_RWops]] stream
 |-
 |'''autoclose'''
-|^non-zero to autoclose or 0 to leave the file open when the structure is closed^ ???
+|SDL_TRUE to close the <code>FILE*</code> when closing the [[SDL_RWops]], SDL_FALSE to leave the <code>FILE*</code> open when the RWops is closed
 |}
 
 == Return Value ==
-*<br/>Returns a pointer to a new RWops structure, or NULL if it fails. <br/>*
+Returns a pointer to the [[SDL_RWops]] structure that is created, or NULL on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
-FILE *fp;
-SDL_RWops *rw;
-
-fp = fopen("myfile.dat", "rb");
-rw = SDL_RWFromFP(fp, 1);
-
+FILE *fp = fopen("myfile.dat", "rb");
+SDL_RWops *rw = SDL_RWFromFP(fp, SDL_TRUE);
 // Do things with rw...
-
-SDL_RWclose(rw); // Automatically does an fclose(fp)
+SDL_RWclose(rw); /* Automatically does an fclose(fp) in this case */
 ```
 
 == Remarks ==
-''You can add useful comments here''
+This function is not available on Windows, since files opened in an application on that platform cannot be used by a dynamically linked library.
 
-*<br/>This is not available under Win32, since files opened in an application on that platform cannot be used by a dynamically linked library.<br/>*
+On some platforms, the first parameter is a <code>void*</code>, on others, it's a <code>FILE*</code>, depending on what system headers are available to SDL. It is always intended to be the <code>FILE*</code> type from the C runtime's stdio.h.
 
 == Related Functions ==
-:[[SDL_RWclose]] (Macro) ???
-:[[SDL_RWFromConstMem]] ???
-:[[SDL_RWFromFile]] *
-:[[SDL_RWFromMem]] *
+:[[SDL_RWclose]]
+:[[SDL_RWFromConstMem]]
+:[[SDL_RWFromFile]]
+:[[SDL_RWFromMem]]
 
 ----
 [[CategoryAPI]], [[CategoryIO]]
